# AI-Engineering

./: .gitignore  README.md  START-HERE.md
01_First_Code_13-11-2025/: README.md
02_Exploring_SDKs_17-11-2025/: README.md
03_Embedding_And_Vector_Impl_20-11-2025/: README.md
04_Spring_AI_21-11-2025/: README.md
05_LangChain_24-11-2025/: .env  README.md  langchain_gemini_demo.py  langchain_openai_demo.py
06_Spring_AI_Embeddings_25-11-2001/: README.md
07_LangChain_ChatMemory_27-11-2025/: README.md  langchain_gemini_demo.py  langchain_openai_demo.py
08_Spring_AI_Vector_Database_8-12-2025/: README.md
09_Spring_AI_RAG_9-12-2025/: README.md
10_LangChain_RAG_11-12-2025/: .env  README.md  main.py  rag_gemini_ex.py  rag_openai_ex.py  steps.txt
11_Spring_AI_Tool_Calling_15-12-2025/: README.md
12_LangChain__Tool__Calling_17-12-2026/demo/: pyproject.toml  tool_demo.py
13_LangChain_Tool_Calling_22-12-2025/: .env  multi_tool.py  pyproject.toml  tool_demo.py
14_MCP_23-12-2025/: README.md
15_MCP_26-12-2025/: README.md
16_MCP_Langchain_29-12-2025/: README.md
18_LangGraph_08_01_2026/MultiAgentLangChain/: main.py  multiagent_demo.py  pyproject.toml
19_LangGraph_Sequential_Workflow_12-01-2026/: README.md
20_LangGraph_Parallel_Workflow_13-01-2026/: README.md
20_LangGraph_Parallel_Workflow_13-01-2026/langgraph_demo/: .env  health_report.py  main.py  pyproject.toml
21_Project/: README.md
22_Project/: README.md
23_Hugging_Face_And_Fine_Tuning/: README.md  huggingfacedemo.ipynb
LANGGRAPH-DEMO/: .env  README.md  comedianworkflow.mmd  health-report.py  llm_workflow.py  loan_eligibility.py  main.py  pyproject.toml
My_Personal_Tutor/: README.md  pom.xml  (+1 more)
(+116 files in other folders)
